# Nemorax

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  run.py  serve_web.py
.github/workflows/: ci.yml  release-build.yml  website-pages.yml
config/: nemsu_kb.json
data/: school_info.json  school_info.md
deploy/oracle/backend/: nemorax-backend.service
deploy/oracle/env/: backend.env.example  web.env.example
deploy/oracle/frontend/: nemorax-web.service
deploy/oracle/nginx/: nemorax.conf
kb/: aliases.json  embeddings_ready.json  entities.json  entity_history.json  name_timeline.json  qa_eval.json  relationships.json  report.md  taxonomy.json  validation_summary.json
scripts/: _kb_common.py  build_kb.py  crawl_site.py  export_embeddings_ready.py  ingest_linked_docs.py  ingest_nemsu_kb.py  validate_kb.py
src/nemorax/: __init__.py
src/nemorax/backend/: __init__.py  auth_manager.py  config.py  export_legacy_storage_sql.py  feedback_manager.py  history_manager.py  ingest_nemsu_kb.py  llm_client.py  main.py  migrate_kb_to_supabase.py  migrate_legacy_storage.py  runtime.py  schemas.py
src/nemorax/frontend/: __init__.py  account_dialog.py  api_client.py  auth_session.py  chat_page.py  config.py  history_service.py  layout.py  main.py  message_bubble.py  (+5 more)
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 202604140001_app_persistence.sql  202604140002_kb_storage.sql  202604140003_security_hardening.sql  202604140004_nemsu_structured_kb.sql  202604140005_kb_navigation.sql  202604210001_retrieval_reliability.sql
tests/: test_backend_app.py  test_backend_cors.py  test_backend_groq_rate_limits.py  test_backend_migrations.py  test_backend_provider_factory.py  test_chat_service.py  test_frontend_auth_session.py  test_frontend_native_auth.py  test_frontend_preferences.py  test_frontend_responsive.py  test_kb_pipeline.py  test_structured_kb_ingestion.py
website/: index.html  privacy.html  terms.html
(+53 files in other folders)
